# multi-tenant-application

./: .envrc  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
api/: middleware.py  multidb.py  routers.py  urls.py  utils.py
api/migrations/: 0001_initial.py  0002_auto_20231223_1614.py
api/models/: __init__.py
api/models/findings/: models.py
api/models/resources/: models.py
api/models/tenants/: models.py
api/v1/: urls.py
api/v1/findings/: serializers.py  urls.py  views.py
multi_tenant_application/: asgi.py  routers.py  urls.py  wsgi.py
multi_tenant_application/api/: exceptions.py  urls.py
multi_tenant_application/api/models/findings/: models.py
multi_tenant_application/api/models/resources/: models.py
multi_tenant_application/api/models/tenants/: models.py
multi_tenant_application/api/v1/: urls.py
multi_tenant_application/api/v1/findings/: models.py  serializers.py  urls.py  views.py
multi_tenant_application/api/v1/resource/: models.py
multi_tenant_application/api/v1/tenant/: models.py
multi_tenant_application/settings/: base.py  local.py
tests/: test_models.py  test_views.py
